feat: add activities report endpoint
