# docs/swagger.json
@@ -12,6 +12,123 @@
     "host": "conexao-inclusao.com",
     "basePath": "/",
     "paths": {
+        "/activities": {
+            "get": {
+                "description": "Get activities by type and period",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Activities"
+                ],
+                "summary": "Get activities by type and period",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type",
+                        "name": "type",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Start date",
+                        "name": "start_date",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "End date",
+                        "name": "end_date",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create activity",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Activities"
+                ],
+                "summary": "Create activity",
+                "parameters": [
+                    {
+                        "description": "Activity",
+                        "name": "activity",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.ActivityRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/activities/{type}/{period}": {
+            "get": {
+                "description": "Count activities by period",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reports"
+                ],
+                "summary": "Count activities by period",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type",
+                        "name": "type",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Period",
+                        "name": "period",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/companies": {
             "get": {
                 "description": "list all registered companies and their users.",
@@ -247,6 +364,61 @@
                     },
                     "500": {
                         "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/disabilities": {
+            "get": {
+                "description": "Get disability totals",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reports"
+                ],
+                "summary": "Get disability totals",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/disabilities/{neighborhood}": {
+            "get": {
+                "description": "Get disability totals by neighborhood",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reports"
+                ],
+                "summary": "Get disability totals by neighborhood",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Neighborhood",
+                        "name": "neighborhood",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.Response"
                         }
@@ -749,6 +921,57 @@
                 }
             }
         },
+        "/people/:id/curriculum": {
+            "post": {
+                "description": "upload a curriculum for a person.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "People"
+                ],
+                "summary": "Upload a person curriculum.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Person ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Curriculum",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/people/:id/disabilities": {
             "put": {
                 "description": "update an existent person disabilities.",
@@ -863,6 +1086,20 @@
                 "Dark",
                 "System"
             ]
+        },
+        "model.ActivityRequest": {
+            "type": "object",
+            "properties": {
+                "actor": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
         },
         "model.AddressRequest": {
             "type": "object",
@@ -1005,10 +1242,13 @@
         "model.DisabilityRequest": {
             "type": "object",
             "properties": {
-                "acquired": {
-                    "type": "boolean"
+                "category": {
+                    "type": "string"
                 },
-                "id": {
+                "description": {
+                    "type": "string"
+                },
+                "rate": {
                     "type": "integer"
                 }
             }
@@ -1065,6 +1305,17 @@
                 }
             }
         },
+        "model.PersonDisabilityRequest": {
+            "type": "object",
+            "properties": {
+                "acquired": {
+                    "type": "boolean"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.PersonDisabilityResponse": {
             "type": "object",
             "properties": {
@@ -1081,7 +1332,7 @@
                     "type": "integer"
                 },
                 "rate": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -1097,7 +1348,7 @@
                 "disabilities": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/model.DisabilityRequest"
+                        "$ref": "#/definitions/model.PersonDisabilityRequest"
                     }
                 },
                 "gender": {
@@ -1121,6 +1372,9 @@
                     "$ref": "#/definitions/model.AddressResponse"
                 },
                 "cpf": {
+                    "type": "string"
+                },
+                "curriculum": {
                     "type": "string"
                 },
                 "disabilities": {
